Atualizei caminho dos scripts

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
   <div ng-view class="container"></div>
 
 
-  <script type="text/javascript" src="/app_angular/app/app.js"></script>
-  <script type="text/javascript" src="/app_angular/app/controller/controller-blue.js"></script>
-  <script type="text/javascript" src="/app_angular/app/controller/controller-red.js"></script>
-  <script type="text/javascript" src="/app_angular/app/controller/controller-green.js"></script>
-  <script type="text/javascript" src="/app_angular/app/controller/controllerPrincipal.js"></script>
-  <script type="text/javascript" src="/app_angular/app/js/jquery.min.js"></script>
-  <script type="text/javascript" src="/app_angular/app/js/jquery.spritely.js"></script>
+  <script type="text/javascript" src="app/app.js"></script>
+  <script type="text/javascript" src="app/controller/controller-blue.js"></script>
+  <script type="text/javascript" src="app/controller/controller-red.js"></script>
+  <script type="text/javascript" src="app/controller/controller-green.js"></script>
+  <script type="text/javascript" src="app/controller/controllerPrincipal.js"></script>
+  <script type="text/javascript" src="app/js/jquery.min.js"></script>
+  <script type="text/javascript" src="app/js/jquery.spritely.js"></script>
 </body>
 </html>
 
